# sift-mcps

./: ._docker-compose.yml  .dockerignore  .gitignore  .mcp.json  .shellcheckrc  AGENTS.md  CLAUDE.md  Conductor.md  NEXT-SESSION.md  Original-Forked-Repo-Architecture.md  Original-Forked-Repo-Tools-Doc.md  PLAN.md  README.md  SESSION-PROMPT.md  SIFT-MCPS-PLAN.md  TASKS.md  audit-mrc-rdp-2026-05-29.md  dfir-portal-fix.md  docker-compose.opencti-connectors.yml  docker-compose.opencti.yml  docker-compose.yml  docs.md  harden.sh  install.sh  matrix-comparison.md  mcp-definitions-plan.md  mcp-qa-friction-log.md  mcp_tool_assessment.md  opencode.json  patch.py  pyproject.toml  pyrightconfig.json  remediation-tasks.md  revamp-plan.html  revamp-tasks.md  server.py  test_mcp.py  ux-bug-fix.md  ux-migration.md  ux-spec.md  (+1 more)
.antigravitycli/: c3ba2944-5983-4952-8fc8-a042c8407a66.json
.claude/agents/: frontend-coder.md  security-expert.md  verifier-griller.md
.github/workflows/: ci.yml  live-vm.yml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
configs/: RUN3-systemd-run-scope-permissions.md  gateway.yaml.template  hermes-forensics-profile.yaml
configs/apparmor/: dfir-exec.template  sift-gateway.template
configs/audit/: 99-agentir-evidence.rules  99-sift-evidence.rules
configs/polkit/: 50-sift-run-command-systemd-run.rules
configs/supabase/: README.md  auth-jwt.env.template  solana-anchor.env.template
configs/systemd/: sift-gateway.service  sift-job-worker.service  sift-opensearch-worker@.service
docs/: B-MVP-023-legacy-dashboard-removal-impact.md  B-MVP-042-memory-hostname-autoderive.md  KANBAN-BOARD-OPS.md  OPENSEARCH-WORKER-HANDOFF.md  ORCHESTRATOR-HANDOFF-2026-06-14.md  README.md  RUN3-run_command-hardening-BUILD-PLAN.md  architecture.md  backend-contract.md  dfir-hardening-guide-pre-migration.md  dfir-hardening-guide.md  evidence-chain-of-custody.md  frontend-dashboard.md  mcp-qa-friction-log.md  run_command_research.md  sec-insights.md  security-controls.md  status.md  tool-audit-2026-05-25.md
docs/add-ons/: author-guide.md
docs/architecture/: SIFT-GATEWAY-SECURITY-MODEL.md  sift-architecture-SPEC.md  sift-architecture.html
docs/codex-assessment/: attack_path_analysis.md  codex_review_directives.txt  validation_report.md
docs/design/: B-MVP-052-deprecated-aliases.md
docs/drafts/: Architecture.mmd  README.md  backend-contract.md  code-structure.md  data-flows-and-lifecycles.md  dfir-hardening-guide-pre-migration.md  e1-connection-reuse-spec.md  evidence-chain-of-custody-premigration.md  interaction-model.md  known-limitations-and-improvements.md  matrix-comparison.md  operator-journey.md  security-architecture.md
docs/hardening/: component-audit.md  research-matrix.md
docs/migration/: ._Architecture.mmd  00_migration_charter.md  01_repo_inventory.md  02_authoritative_domains_and_boundaries.md  03_opensearch_core_integration.md  04_execution_current_state.md  05_execution_job_model.md  06_execution_integration_contracts.md  07_execution_roadmap.md  08_control_plane_schema.md  09_identity_auth_cutover.md  10_addon_backend_spec.md  11_first_pr_candidate.md  12_pr01.md  13_pr02.md  14_fastmcp3_supabase_integration.md  15_backend_tooling_revamp.md  16_backend_tool_contracts.md  17_gateway_cutover_d27b.md  18_target_architecture_acceleration.md  19_pr03_unified_supabase_jwt_identity.md  20_portal_dashboard_inventory.md  21_pr03b_active_case_db_authority.md  22_d22a_mcp_backends_registry.md  Architecture.mmd  CONVENTIONS.md  JOB0_baseline_execution_checks.md  MIGRATION_STATE.md  Migration-Spec.md  OPERATING_MODEL.md  PR01_identity_schema_checks.md  PR02_token_registry_checks.md  README.md  REGISTER.md  Session-Notes.md  fastmcp-full-docs.txt  task-batches.md
docs/mintlify/: docs.json
docs/new-docs/: ADDON_ECOSYSTEM_AND_VERIFICATION.md  ALGORITHM_FLOWS.md  AUDIT_HARDENING_SPEC.md  AXIS_A_BUILD_PLAN.md  AXIS_B2_BUILD_PLAN.md  AXIS_B_BUILD_PLAN.md  AXIS_C_BUILD_PLAN.md  AXIS_D_BUILD_PLAN.md  AXIS_E_BUILD_PLAN.md  AXIS_F_BUILD_PLAN.md  AXIS_G_BUILD_PLAN.md  AXIS_H_BUILD_PLAN.md  AXIS_I_BUILD_PLAN.md  CODEBASE_ASSESSMENT.md  DATA_FLOW.md  DATA_STRUCTURES.md  DEVELOPER_ENTRYPOINT.md  DOCS_MAINTENANCE.md  KEY_FUNCTIONS.md  KEY_QUESTIONS.md  LINEAR_OPERATING_MODEL.md  LINEAR_ORCHESTRATION_GUIDE.md  (+7 more)
lib/: addons.sh  assets.sh  common.sh  config.sh  examiner.sh  handoff.sh  hardening.sh  migrations.sh  opensearch.sh  preflight.sh  python.sh  services.sh  state.sh  supabase.sh  teardown.sh  tls.sh
mission-control/: index-standalone.html  index.html  server.py
scripts/: backfill_case_metadata.py  check-portal-dist.sh  check_newdocs_refs.py  check_package_coverage.py  inventory-sift-tools.sh  phase2_gate_test.py  probe_backends.py  remediation-gate.sh  reset-vm-test.sh  rotate-tls.sh  setup-addon.sh  setup-agent-runtime.sh  setup-ingest-mount-sudoers.sh  setup-run-command-systemd-scope-sudoers.sh  setup-supabase.sh  sift-run-command-systemd-scope  sift-seal-evidence  stage-evidence.sh  test_mcp.py  uninstall.sh  validate_docs.py  validate_migration_docs.py  verify-ingest-prereqs.sh
security_report/: sec_review_portal-v3-p1-final_2026-06-21_20-00-00.md
supabase/: config.toml
tests/: _installer_support.py  test_check_newdocs_refs.py  test_installer_modularization.py  test_installer_no_evidence_deletion.py  test_installer_uv_pin_and_tools.py  test_tls1_cert_profile.py  test_version_single_source.py
(+150 files in other folders)
