[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false

[tool.uv.sources]
sift-core = { workspace = true }
forensic-knowledge = { workspace = true }
sift-common = { workspace = true }
sift-gateway = { workspace = true }
opensearch-mcp = { workspace = true }
rag-mcp = { workspace = true }
opencti-mcp = { workspace = true }
case-dashboard = { workspace = true }
windows-triage-mcp = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sift-mcps"
dynamic = ["version"]
description = "Portable MCP runtime for the Hermes forensic investigation agent (SIFT Workstation)"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AppliedIncidentResponse.com" }]
keywords = ["mcp", "forensics", "incident-response", "dfir", "security"]

# Single source of truth for the version of EVERY workspace member (#15/I-PS1):
# hatch-vcs derives it from the git tag (PEP 440), so there is no hand-edited
# literal to drift. tag-pattern + the `--match v*` describe command make the
# resolver IGNORE the repo's non-PEP440 tags (e.g. p0-signoff) and key only off
# release tags `vX.Y.Z`. fallback-version covers a no-.git source tree (sdist
# install). Until the operator applies `git tag v0.6.2`, an untagged checkout
# resolves to a dev version (e.g. 0.6.3.devN+g<sha>) — expected, not a literal.
[tool.hatch.version]
source = "vcs"
fallback-version = "0.6.2"
tag-pattern = "^v(?P<version>\\d+\\.\\d+\\.\\d+.*)$"

[tool.hatch.version.raw-options]
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v*"]

[project.optional-dependencies]
core = [
    "sift-core",
    "case-dashboard",
    "forensic-knowledge",
    "sift-common",
    "sift-gateway",
]
standard = [
    "sift-mcps[core]",
    "opensearch-mcp",
]
full = [
    "sift-mcps[standard]",
    "rag-mcp",
]
opencti = [
    "opencti-mcp",
]
windows-triage = [
    "windows-triage-mcp",
]
chroma-import = [
    "rag-mcp[chroma-import]",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pyright>=1.1",
    "ruff>=0.15",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    # E501 (line length) is advisory only (XYE-76 / D8 decision). line-length=88
    # below is the target for new code and drives import sorting, but E501 is not
    # enforced: there are ~1600 legacy long lines and no auto-formatter
    # (ruff format / black) is adopted, so enforcing it now would be mass churn
    # for little value. Revisit if/when `ruff format` is adopted.
    "E501",
    "E402",
    "SIM102",
    "SIM103",
    "SIM105",
    "SIM108",
    "SIM115",
    "SIM117",
    "UP017",
    "UP036",
    "UP041",
    "UP046",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "B017", "B018", "F841", "B007", "E741", "E722", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["packages/*/src"]
branch = true
# Test-support helpers are exercised by OTHER packages' tests (e.g. the surfacing
# conformance harness in sift_common.testing is used by opensearch-mcp/sift-gateway
# tests), so they read as uncovered in their own package's coverage run. Omit them
# from product coverage rather than counting test-infra as uncovered product code.
omit = ["*/sift_common/testing/*"]
